ApexSalesforceTriggerHandlerFramework/force-app/main/default/objects/Candidate__c/fields/CurrentlyEmployed__c.field-meta.xml
<CustomField>
    <fullName>CurrentlyEmployed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently Employed</label>
    <type>Checkbox</type>
</CustomField>