ApexSalesforceTriggerHandlerFramework/force-app/main/default/objects/Candidate__c/fields/EducationCertification__c.field-meta.xml
<CustomField>
    <fullName>EducationCertification__c</fullName>
    <label>Education Certification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High School Graduation</fullName>
            </value>
            <value>
                <fullName>Bachelor&apos;s Degree</fullName>
            </value>
            <value>
                <fullName>Post Bachelor Degree</fullName>
            </value>
            <value>
                <fullName>PhD Qualification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>