ApexSalesforceTriggerHandlerFramework/force-app/main/default/objects/Candidate__c/fields/SecureSocialNumber__c.field-meta.xml
<CustomField>
    <fullName>SecureSocialNumber__c</fullName>
    <label>Secure Social Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>