ApexSalesforceTriggerHandlerFramework/force-app/main/default/objects/Candidate__c/fields/YearsOfExperience__c.field-meta.xml
<CustomField>
    <fullName>YearsOfExperience__c</fullName>
    <label>Years Of Experience</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>